Add posts details view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,22 @@
-<h2>Post</h2>
-<h1>List of post by given id</h1>
+
+<div class="full_post">
+<div class="post_body">
+  <div class="post_header">
+    <h4>Post by: <%= @post.author.name %></h4>
+    <p>
+      Comments: <%= @post.comments_counter %> 
+      Likes: <%= @post.likes_counter %>
+    </p>
+  </div>
+  <p class="post-text"><%= @post.text %></p>
+</div>
+  <div class="post-comments">
+    <% if @post.comments.empty? %>
+    <p>Add comment</p>
+    <% else %>
+    <% @post.comments.each do |comment| %>
+      <p><%= comment.author.name %>: <%= comment.text %></p>
+    <%end%>
+    <%end%>
+</div>
+</div>
