--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Users</h1>
-<h1>List of all users</h1>
+<div class="list-users"> 
+<% @users.each do |user| %>
+     <%= link_to(user) do %> 
+    <%= render "shared/details", user: user %> 
+    <%end%> 
+    <%end%> 
+</div>
