--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
-<h1>List of user by given id</h1>
+<div class="user-page">
+  <%= render "shared/details", user: @user %>
+    <div class="user-bio">
+     <strong class="bio">Bio: </strong> <br>
+     <p><%= @user.bio %></p>
+    </div>
+    <div class="user-posts">
+    <% @user.posts.each do |post| %>
+        <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
+      <%= render "shared/posts_details", post: post %>
+        <%end%>
+    <%end%>
+    </div>
+    <button><%= link_to 'See all posts', user_posts_path(@user)%></button>
+</div>
