--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
      <p><%= @user.bio %></p>
     </div>
     <div class="user-posts">
-    <% @user.posts.each do |post| %>
+    <% @user.most_recent_posts.each do |post| %>
         <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
       <%= render "shared/posts_details", post: post %>
         <%end%>
