--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,14 @@
 <div class="full_post">
-<div class="post_body">
-  <div class="post_header">
+  <div class="post_body">
+    <div class="post_header">
     <h4>Post by: <%= @post.author.name %></h4>
     <p>
       Comments: <%= @post.comments_counter %> 
       Likes: <%= @post.likes_counter %>
     </p>
+    </div>
+   <p class="post-text"><%= @post.text %></p>
   </div>
-  <p class="post-text"><%= @post.text %></p>
-</div>
   <div class="post-comments">
     <% if @post.comments.empty? %>
     <p>Add comment</p>
@@ -17,5 +17,12 @@
       <p><%= comment.author.name %>: <%= comment.text %></p>
     <%end%>
     <%end%>
+   </div>
 </div>
+<div class="user-action">
+<%= link_to 'Like ', "#{request.url}/likes/new", class:"like-btn" %>
+<a href="/users/<%= @user.id %>/posts/<%= @post.id %>/comments/new">
+<button class="comment-btn">
+        Add comment
+</button></a>
 </div>
