--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,14 @@
 <div class="posts">
  <%= render "shared/details", user: @user %>
-  <div>
-   <% @user.most_recent_posts.each do |post| %>
+  <div class="all_posts">
+   <% @posts.each_with_index do |post| %>
      <%= link_to user_post_path(user_id:@user.id, id: post.id) do%>
        <%= render "shared/posts_details", post: post %>
         <div class="comments">
         <% if post.comments.empty? %>
-          <p>Empty</p>
+          <p>No comment</p>
         <% else %>
-            <% post.comments.each do |comment| %>
+            <% post.most_recent_comments.each do |comment| %>
              <p class="comment-body"><%= comment.author.name %>: <%= comment.text %></p>
             <%end%>
             <%end%>
